# eureka-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: aws.rs  instance.rs  lib.rs  registry.rs
src/rest/: mod.rs  structures.rs
src/xml/: structures.rs
