[package]
authors = ["Josh Holmer <jholmer.in@gmail.com>"]
name = "eureka-client"
description = "Handles HTTP requests to and registering a service with Eureka"
repository = "https://github.com/shssoichiro/eureka-rs"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/eureka-client"
version = "0.2.0"
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
log = "0.4"
quick-error = "1.1"
reqwest = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
percent-encoding = "1.0"
itertools = "0.7"
rand = "0.6"
strong-xml = "0.6"
xmlparser = "0.13"